refactor(core): 替换stream收集方式为toList提升效率
- 将多处使用Collectors.toList()替换为Java 16自带的Stream.toList()
- 移除不再需要的Collectors导入语句