@@ -22,7 +22,6 @@ import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 验证码登录策略
@@ -138,11 +137,11 @@ public class CaptchaLoginStrategy implements LoginStrategy {
         // 提取角色ID和角色编码
         List<Long> roleIds = roles.stream()
             .map(SysRole::getRoleId)
-            .collect(Collectors.toList());
+            .toList();
         
         List<String> roleCodes = roles.stream()
             .map(SysRole::getRoleCode)
-            .collect(Collectors.toList());
+            .toList();
         
         // 查询用户的所有权限（包括角色继承的权限，支持RBAC1）
         List<String> permissions = permissionService.selectPermissionCodesByUserId(user.getUserId());
