@@ -1,7 +1,6 @@
 package com.mumu.woodlin.admin.strategy;
 
 import cn.dev33.satoken.stp.StpUtil;
-import cn.hutool.core.util.StrUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.mumu.woodlin.common.constant.CommonConstant;
 import com.mumu.woodlin.common.enums.ResultCode;
@@ -23,7 +22,6 @@ import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 手机号短信登录策略
@@ -38,34 +36,34 @@ import java.util.stream.Collectors;
 @Component
 @RequiredArgsConstructor
 public class MobileSmsLoginStrategy implements LoginStrategy {
-    
+
     private final ISysUserService userService;
     private final ISysRoleService roleService;
     private final ISysPermissionService permissionService;
     private final SmsService smsService;
-    
+
     @Override
     public LoginResponse login(LoginRequest loginRequest) {
         log.info("执行手机号短信登录策略: mobile={}", loginRequest.getMobile());
-        
+
         // 验证短信验证码
         if (!smsService.verifySmsCode(loginRequest.getMobile(), loginRequest.getSmsCode())) {
             log.warn("手机号登录失败: 短信验证码错误或已过期, mobile={}", loginRequest.getMobile());
             throw BusinessException.of(ResultCode.CAPTCHA_ERROR, "短信验证码错误或已过期");
         }
-        
+
         // 根据手机号查找用户（使用Lambda查询）
         SysUser user = userService.getOne(new LambdaQueryWrapper<SysUser>()
                 .eq(SysUser::getMobile, loginRequest.getMobile())
                 .last("LIMIT 1"));
-        
+
         if (user == null) {
             log.warn("手机号登录失败: 用户不存在, mobile={}", loginRequest.getMobile());
             // 清除验证码
             smsService.clearSmsCode(loginRequest.getMobile());
             throw BusinessException.of(ResultCode.USER_NOT_FOUND, "手机号未注册");
         }
-        
+
         // 检查用户状态
         if (!CommonConstant.STATUS_ENABLE.equals(user.getStatus())) {
             log.warn("手机号登录失败: 账号已被禁用, mobile={}", loginRequest.getMobile());
@@ -73,36 +71,36 @@ public class MobileSmsLoginStrategy implements LoginStrategy {
             smsService.clearSmsCode(loginRequest.getMobile());
             throw BusinessException.of(ResultCode.USER_DISABLED, "账号已被禁用");
         }
-        
+
         // 验证成功，清除验证码
         smsService.clearSmsCode(loginRequest.getMobile());
-        
+
         // 更新登录信息
         updateLoginInfo(user);
-        
+
         // 创建登录用户信息
         LoginUser loginUser = buildLoginUser(user);
-        
+
         // 使用Sa-Token登录
         StpUtil.login(user.getUserId());
         StpUtil.getSession().set(SecurityUtil.USER_KEY, loginUser);
-        
+
         // 构建响应
         LoginResponse response = new LoginResponse()
             .setToken(StpUtil.getTokenValue())
             .setTokenType("Bearer")
             .setExpiresIn(StpUtil.getTokenTimeout())
             .setMessage("手机号登录成功");
-        
+
         log.info("手机号登录成功: mobile={}, username={}", loginRequest.getMobile(), user.getUsername());
         return response;
     }
-    
+
     @Override
     public LoginType getLoginType() {
         return LoginType.MOBILE_SMS;
     }
-    
+
     @Override
     public boolean validateRequest(LoginRequest loginRequest) {
         if (!LoginStrategy.super.validateRequest(loginRequest)) {
@@ -112,7 +110,7 @@ public class MobileSmsLoginStrategy implements LoginStrategy {
         return loginRequest.getMobile() != null && !loginRequest.getMobile().isBlank()
                 && loginRequest.getSmsCode() != null && !loginRequest.getSmsCode().isBlank();
     }
-    
+
     /**
      * 更新用户登录信息
      *
@@ -124,7 +122,7 @@ public class MobileSmsLoginStrategy implements LoginStrategy {
         user.setLoginCount(user.getLoginCount() == null ? 1 : user.getLoginCount() + 1);
         userService.updateById(user);
     }
-    
+
     /**
      * 构建登录用户信息（支持RBAC1）
      *
@@ -134,19 +132,19 @@ public class MobileSmsLoginStrategy implements LoginStrategy {
     private LoginUser buildLoginUser(SysUser user) {
         // 查询用户的所有角色（包括继承的角色，支持RBAC1）
         List<SysRole> roles = roleService.selectAllRolesByUserId(user.getUserId());
-        
+
         // 提取角色ID和角色编码
         List<Long> roleIds = roles.stream()
             .map(SysRole::getRoleId)
-            .collect(Collectors.toList());
-        
+            .toList();
+
         List<String> roleCodes = roles.stream()
             .map(SysRole::getRoleCode)
-            .collect(Collectors.toList());
-        
+            .toList();
+
         // 查询用户的所有权限（包括角色继承的权限，支持RBAC1）
         List<String> permissions = permissionService.selectPermissionCodesByUserId(user.getUserId());
-        
+
         return new LoginUser()
             .setUserId(user.getUserId())
             .setUsername(user.getUsername())
@@ -165,7 +163,7 @@ public class MobileSmsLoginStrategy implements LoginStrategy {
             .setLoginTime(LocalDateTime.now())
             .setLoginIp(getClientIp());
     }
-    
+
     /**
      * 获取客户端IP地址
      *
