@@ -1,27 +1,26 @@
 package com.mumu.woodlin.system.service.impl;
 
+import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.util.StrUtil;
+import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.mumu.woodlin.system.dto.RouteVO;
+import com.mumu.woodlin.system.entity.SysPermission;
+import com.mumu.woodlin.system.mapper.SysPermissionMapper;
+import com.mumu.woodlin.system.service.ISysPermissionService;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import cn.hutool.core.collection.CollUtil;
-import cn.hutool.core.util.StrUtil;
-import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
-import com.mumu.woodlin.system.dto.RouteVO;
-import com.mumu.woodlin.system.entity.SysPermission;
-import com.mumu.woodlin.system.mapper.SysPermissionMapper;
-import com.mumu.woodlin.system.service.ISysPermissionService;
-
 /**
  * 权限信息服务实现
- * 
+ *
  * @author mumu
  * @description 权限信息服务实现，支持RBAC1权限继承
  * @since 2025-10-31
@@ -29,17 +28,17 @@ import com.mumu.woodlin.system.service.ISysPermissionService;
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, SysPermission> 
+public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, SysPermission>
         implements ISysPermissionService {
-    
+
     private final SysPermissionMapper permissionMapper;
-    
+
     /**
      * 权限缓存服务（可选依赖，如果不存在则不使用缓存）
      */
     @Autowired(required = false)
     private com.mumu.woodlin.security.service.PermissionCacheService permissionCacheService;
-    
+
     @Override
     public List<SysPermission> selectPermissionsByRoleId(Long roleId) {
         if (roleId == null) {
@@ -47,7 +46,7 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
         }
         return permissionMapper.selectPermissionsByRoleId(roleId);
     }
-    
+
     @Override
     public List<SysPermission> selectPermissionsByRoleIds(List<Long> roleIds) {
         if (CollUtil.isEmpty(roleIds)) {
@@ -55,7 +54,7 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
         }
         return permissionMapper.selectPermissionsByRoleIds(roleIds);
     }
-    
+
     @Override
     public List<SysPermission> selectPermissionsByUserId(Long userId) {
         if (userId == null) {
@@ -63,13 +62,13 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
         }
         return permissionMapper.selectPermissionsByUserId(userId);
     }
-    
+
     @Override
     public List<String> selectPermissionCodesByUserId(Long userId) {
         if (userId == null) {
             return Collections.emptyList();
         }
-        
+
         // 尝试从缓存获取
         if (permissionCacheService != null) {
             List<String> cachedPermissions = permissionCacheService.getUserPermissions(userId);
@@ -78,33 +77,33 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
                 return cachedPermissions;
             }
         }
-        
+
         // 从数据库查询
         List<SysPermission> permissions = selectPermissionsByUserId(userId);
         if (CollUtil.isEmpty(permissions)) {
             return Collections.emptyList();
         }
-        
+
         List<String> permissionCodes = permissions.stream()
             .map(SysPermission::getPermissionCode)
             .filter(StrUtil::isNotBlank)
             .distinct()
-            .collect(Collectors.toList());
-        
+            .toList();
+
         // 缓存结果
         if (permissionCacheService != null) {
             permissionCacheService.cacheUserPermissions(userId, permissionCodes);
         }
-        
+
         return permissionCodes;
     }
-    
+
     @Override
     public List<String> selectButtonPermissionCodesByUserId(Long userId) {
         if (userId == null) {
             return Collections.emptyList();
         }
-        
+
         // 尝试从缓存获取
         if (permissionCacheService != null) {
             List<String> cachedPermissions = permissionCacheService.getUserButtonPermissions(userId);
@@ -113,35 +112,35 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
                 return cachedPermissions;
             }
         }
-        
+
         // 从数据库查询
         List<SysPermission> permissions = selectPermissionsByUserId(userId);
         if (CollUtil.isEmpty(permissions)) {
             return Collections.emptyList();
         }
-        
+
         // 过滤按钮权限
         List<String> buttonPermissions = permissions.stream()
             .filter(p -> "F".equals(p.getPermissionType()))
             .map(SysPermission::getPermissionCode)
             .filter(StrUtil::isNotBlank)
             .distinct()
-            .collect(Collectors.toList());
-        
+            .toList();
+
         // 缓存结果
         if (permissionCacheService != null) {
             permissionCacheService.cacheUserButtonPermissions(userId, buttonPermissions);
         }
-        
+
         return buttonPermissions;
     }
-    
+
     @Override
     public List<String> selectMenuPermissionCodesByUserId(Long userId) {
         if (userId == null) {
             return Collections.emptyList();
         }
-        
+
         // 尝试从缓存获取
         if (permissionCacheService != null) {
             List<String> cachedPermissions = permissionCacheService.getUserMenuPermissions(userId);
@@ -150,35 +149,35 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
                 return cachedPermissions;
             }
         }
-        
+
         // 从数据库查询
         List<SysPermission> permissions = selectPermissionsByUserId(userId);
         if (CollUtil.isEmpty(permissions)) {
             return Collections.emptyList();
         }
-        
+
         // 过滤菜单权限（目录和菜单）
         List<String> menuPermissions = permissions.stream()
             .filter(p -> "M".equals(p.getPermissionType()) || "C".equals(p.getPermissionType()))
             .map(SysPermission::getPermissionCode)
             .filter(StrUtil::isNotBlank)
             .distinct()
-            .collect(Collectors.toList());
-        
+            .toList();
+
         // 缓存结果
         if (permissionCacheService != null) {
             permissionCacheService.cacheUserMenuPermissions(userId, menuPermissions);
         }
-        
+
         return menuPermissions;
     }
-    
+
     @Override
     public List<RouteVO> selectRoutesByUserId(Long userId) {
         if (userId == null) {
             return Collections.emptyList();
         }
-        
+
         // 尝试从缓存获取
         if (permissionCacheService != null) {
             List<RouteVO> cachedRoutes = permissionCacheService.getUserRoutes(userId);
@@ -187,13 +186,13 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
                 return cachedRoutes;
             }
         }
-        
+
         // 从数据库查询用户所有权限（包括继承的权限）
         List<SysPermission> permissions = selectPermissionsByUserId(userId);
         if (CollUtil.isEmpty(permissions)) {
             return Collections.emptyList();
         }
-        
+
         // 只保留菜单和目录（M-目录，C-菜单），过滤掉按钮权限（F-按钮）
         List<SysPermission> menuPermissions = permissions.stream()
             .filter(p -> "M".equals(p.getPermissionType()) || "C".equals(p.getPermissionType()))
@@ -204,27 +203,27 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
                 int order2 = p2.getSortOrder() != null ? p2.getSortOrder() : 0;
                 return Integer.compare(order1, order2);
             })
-            .collect(Collectors.toList());
-        
+            .toList();
+
         // 转换为RouteVO并构建树形结构
         List<RouteVO> routes = menuPermissions.stream()
             .map(this::convertToRouteVO)
-            .collect(Collectors.toList());
-        
+            .toList();
+
         // 构建树形结构
         List<RouteVO> routeTree = buildRouteTree(routes, 0L);
-        
+
         // 缓存结果
         if (permissionCacheService != null) {
             permissionCacheService.cacheUserRoutes(userId, routeTree);
         }
-        
+
         return routeTree;
     }
-    
+
     /**
      * 将SysPermission转换为RouteVO
-     * 
+     *
      * @param permission 权限信息
      * @return 路由VO
      */
@@ -235,7 +234,7 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
         route.setName(convertToRouteName(permission.getPermissionCode()));
         route.setPath(permission.getPath());
         route.setComponent(permission.getComponent());
-        
+
         // 设置meta信息
         RouteVO.RouteMeta meta = new RouteVO.RouteMeta();
         meta.setTitle(permission.getPermissionName());
@@ -244,21 +243,21 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
         meta.setKeepAlive("1".equals(permission.getIsCache()));
         meta.setIsFrame("1".equals(permission.getIsFrame()));
         meta.setOrder(permission.getSortOrder());
-        
+
         // 设置权限标识
         if (StrUtil.isNotBlank(permission.getPermissionCode())) {
             meta.setPermissions(Collections.singletonList(permission.getPermissionCode()));
         }
-        
+
         route.setMeta(meta);
-        
+
         return route;
     }
-    
+
     /**
      * 将权限编码转换为路由名称
      * 例如: system:user -> SystemUser
-     * 
+     *
      * @param permissionCode 权限编码
      * @return 路由名称
      */
@@ -266,25 +265,25 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
         if (StrUtil.isBlank(permissionCode)) {
             return null;
         }
-        
+
         // 移除冒号，将每个单词首字母大写
         return StrUtil.toCamelCase(permissionCode.replace(":", "_"));
     }
-    
+
     /**
      * 构建路由树形结构
-     * 
+     *
      * @param routes 路由列表
      * @param parentId 父ID
      * @return 树形路由列表
      */
     private List<RouteVO> buildRouteTree(List<RouteVO> routes, Long parentId) {
         List<RouteVO> tree = new ArrayList<>();
-        
+
         // 按父ID分组
         Map<Long, List<RouteVO>> groupedByParent = routes.stream()
             .collect(Collectors.groupingBy(RouteVO::getParentId));
-        
+
         // 构建树
         List<RouteVO> rootNodes = groupedByParent.getOrDefault(parentId, Collections.emptyList());
         for (RouteVO node : rootNodes) {
@@ -296,13 +295,13 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
             }
             tree.add(node);
         }
-        
+
         return tree;
     }
-    
+
     /**
      * 递归构建子节点的children
-     * 
+     *
      * @param parent 父节点
      * @param groupedByParent 按父ID分组的路由Map
      */
@@ -310,7 +309,7 @@ public class SysPermissionServiceImpl extends ServiceImpl<SysPermissionMapper, S
         if (parent.getChildren() == null) {
             return;
         }
-        
+
         for (RouteVO child : parent.getChildren()) {
             List<RouteVO> grandChildren = groupedByParent.get(child.getId());
             if (CollUtil.isNotEmpty(grandChildren)) {
